force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Object for capturing different address types associated with accounts.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A{000000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>