force-app/main/default/objects/Address__c/fields/AddressCompanyName__c.field-meta.xml
<CustomField>
    <fullName>AddressCompanyName__c</fullName>
    <inlineHelpText>If the name on the invoice is different from the company name, please enter it here. If it is the same, leave this field blank.</inlineHelpText>
    <label>Address Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>