force-app/main/default/objects/Address__c/fields/AddressStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressStatus__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>