force-app/main/default/objects/Address__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddressForReturns</fullName>
                <label>Address for Returns</label>
            </value>
            <value>
                <fullName>AddressOfWarehouse</fullName>
                <label>Address of Warehouse</label>
            </value>
            <value>
                <fullName>AdSalesAccounting</fullName>
                <label>AdSales Accounting</label>
            </value>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>InvoiceAddress</fullName>
                <label>Invoice Address</label>
            </value>
            <value>
                <fullName>SupplierShippingAddress</fullName>
                <label>Supplier Shipping Address</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>