force-app/main/default/objects/Address__c/fields/BusinessUnitAdSalesAddress__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitAdSalesAddress__c</fullName>
    <label>Business Unit AdSales Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Marketplace + Retail</fullName>
            </value>
            <value>
                <fullName>extern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>