force-app/main/default/objects/Address__c/fields/InvoiceConfigurationLanguage__c.field-meta.xml
<CustomField>
    <fullName>InvoiceConfigurationLanguage__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Address__CountryCode__s, &quot;DE&quot;),  /* Germany */
        ISPICKVAL(Address__CountryCode__s, &quot;AT&quot;),  /* Austria */
        ISPICKVAL(Address__CountryCode__s, &quot;CH&quot;)   /* Switzerland */
    ),
    &quot;german&quot;,
    &quot;english&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Configuration Language</label>
    <type>Text</type>
</CustomField>