force-app/main/default/objects/Address__c/fields/MerchantCompanyName__c.field-meta.xml
<CustomField>
    <fullName>MerchantCompanyName__c</fullName>
    <description>Field needed for the integration to Merchant Center, to deliver correct invoice or return address company name</description>
    <formula>IF(
    NOT(ISBLANK(AddressCompanyName__c)),
    AddressCompanyName__c,
    Account__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Company Name</label>
    <type>Text</type>
</CustomField>