force-app/main/default/objects/Address__c/listViews/AdSales.listView-meta.xml
<ListView>
    <fullName>AdSales</fullName>
    <columns>ContactPerson__c</columns>
    <columns>Account__c</columns>
    <columns>BusinessUnitAdSalesAddress__c</columns>
    <columns>AddressType__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessUnit__c</field>
        <operation>equals</operation>
        <value>AdSales</value>
    </filters>
    <label>AdSales</label>
    <sharedTo>
        <group>AdSales</group>
    </sharedTo>
</ListView>