force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AddressType__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>ContactPerson__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>